--- a/Tensorflow/02_neural_network_classification_with_tensorflow.ipynb
+++ b/Tensorflow/02_neural_network_classification_with_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkehAyuA31xuE9/KdKbpVS",
+      "authorship_tag": "ABX9TyNhhSEJGVEeXbwrm1XBHDVe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "S0StZltnx80X"
       },
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "wRNpIDbi1HSf"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
         "id": "Pa4MQLhC1T8n",
         "outputId": "ecb2b3a6-117a-46e0-c5da-90e858516144"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +97,7 @@
         "id": "ggdWHwSz1Uem",
         "outputId": "cb445eb7-3dec-4823-d6af-cb36bb03407c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
         "id": "isn8HtU31VF-",
         "outputId": "800bdb60-9dbf-4feb-b40f-50a1a2d2c3fc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
         "id": "wuDyYxo12Cvw",
         "outputId": "6bd2538a-1b9c-4633-9549-6f03396b62f3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +510,7 @@
         },
         "outputId": "3b2499fd-a6f4-4c7a-96b9-b6da23ad9210"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
         "id": "Z8-2U4DC8tiw",
         "outputId": "78665a22-6d82-491d-85ab-0752c09970c9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,7 +792,7 @@
         "id": "fBCZCQEz9epQ",
         "outputId": "64646c9e-d3b3-45e9-8519-a112d4c60dff"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
         "id": "JhsgT-xW-QXg",
         "outputId": "ed4680ec-4811-4a85-f572-469b59d2bacc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1057,7 +1057,7 @@
         "id": "gZD1wZ5p-V22",
         "outputId": "a4940fc3-8c29-4f2e-f63d-13631ff64f74"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1080,9 +1080,286 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "model_3 = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Dense(100),\n",
+        "    tf.keras.layers.Dense(10),\n",
+        "    tf.keras.layers.Dense(1)\n",
+        "])\n",
+        "\n",
+        "model_3.compile(loss = tf.keras.losses.BinaryCrossentropy(),\n",
+        "                optimizer = tf.keras.optimizers.Adam(),\n",
+        "                metrics = ['accuracy'])\n",
+        "\n",
+        "model_3.fit(X, y, epochs = 100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ffBMTp5Y-wcm",
+        "outputId": "9d3307ff-803d-4b56-a146-e90f63eb6136"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/100\n",
+            "32/32 [==============================] - 1s 2ms/step - loss: 2.8525 - accuracy: 0.4660\n",
+            "Epoch 2/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7153 - accuracy: 0.4830\n",
+            "Epoch 3/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6957 - accuracy: 0.4960\n",
+            "Epoch 4/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6963 - accuracy: 0.4860\n",
+            "Epoch 5/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6961 - accuracy: 0.4780\n",
+            "Epoch 6/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6971 - accuracy: 0.4550\n",
+            "Epoch 7/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6955 - accuracy: 0.5080\n",
+            "Epoch 8/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6947 - accuracy: 0.5240\n",
+            "Epoch 9/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6993 - accuracy: 0.4950\n",
+            "Epoch 10/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6946 - accuracy: 0.4840\n",
+            "Epoch 11/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7006 - accuracy: 0.4870\n",
+            "Epoch 12/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6967 - accuracy: 0.4790\n",
+            "Epoch 13/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6981 - accuracy: 0.4970\n",
+            "Epoch 14/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6969 - accuracy: 0.5170\n",
+            "Epoch 15/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6984 - accuracy: 0.4820\n",
+            "Epoch 16/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6956 - accuracy: 0.4990\n",
+            "Epoch 17/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7019 - accuracy: 0.4930\n",
+            "Epoch 18/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6971 - accuracy: 0.4820\n",
+            "Epoch 19/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6981 - accuracy: 0.5090\n",
+            "Epoch 20/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6996 - accuracy: 0.4680\n",
+            "Epoch 21/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6975 - accuracy: 0.5140\n",
+            "Epoch 22/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6969 - accuracy: 0.4720\n",
+            "Epoch 23/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6959 - accuracy: 0.5240\n",
+            "Epoch 24/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6997 - accuracy: 0.4770\n",
+            "Epoch 25/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7002 - accuracy: 0.4980\n",
+            "Epoch 26/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7000 - accuracy: 0.4930\n",
+            "Epoch 27/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6989 - accuracy: 0.5180\n",
+            "Epoch 28/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6986 - accuracy: 0.4730\n",
+            "Epoch 29/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6990 - accuracy: 0.5020\n",
+            "Epoch 30/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7115 - accuracy: 0.4750\n",
+            "Epoch 31/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6946 - accuracy: 0.5260\n",
+            "Epoch 32/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6982 - accuracy: 0.4610\n",
+            "Epoch 33/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6987 - accuracy: 0.4950\n",
+            "Epoch 34/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7013 - accuracy: 0.4900\n",
+            "Epoch 35/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6983 - accuracy: 0.4880\n",
+            "Epoch 36/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6958 - accuracy: 0.4880\n",
+            "Epoch 37/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6980 - accuracy: 0.4900\n",
+            "Epoch 38/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6982 - accuracy: 0.5040\n",
+            "Epoch 39/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7015 - accuracy: 0.4570\n",
+            "Epoch 40/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6981 - accuracy: 0.5020\n",
+            "Epoch 41/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6990 - accuracy: 0.5260\n",
+            "Epoch 42/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.7032 - accuracy: 0.4850\n",
+            "Epoch 43/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6972 - accuracy: 0.4980\n",
+            "Epoch 44/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6992 - accuracy: 0.4820\n",
+            "Epoch 45/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7034 - accuracy: 0.4930\n",
+            "Epoch 46/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6955 - accuracy: 0.4820\n",
+            "Epoch 47/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6985 - accuracy: 0.4940\n",
+            "Epoch 48/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6993 - accuracy: 0.5060\n",
+            "Epoch 49/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6994 - accuracy: 0.4740\n",
+            "Epoch 50/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.7001 - accuracy: 0.4640\n",
+            "Epoch 51/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7027 - accuracy: 0.4650\n",
+            "Epoch 52/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 0.6972 - accuracy: 0.4850\n",
+            "Epoch 53/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6977 - accuracy: 0.4790\n",
+            "Epoch 54/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7017 - accuracy: 0.5040\n",
+            "Epoch 55/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6969 - accuracy: 0.5130\n",
+            "Epoch 56/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6973 - accuracy: 0.5050\n",
+            "Epoch 57/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6994 - accuracy: 0.4850\n",
+            "Epoch 58/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6994 - accuracy: 0.4810\n",
+            "Epoch 59/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7030 - accuracy: 0.4920\n",
+            "Epoch 60/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7042 - accuracy: 0.4990\n",
+            "Epoch 61/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7020 - accuracy: 0.4580\n",
+            "Epoch 62/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6968 - accuracy: 0.5080\n",
+            "Epoch 63/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6949 - accuracy: 0.4720\n",
+            "Epoch 64/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6958 - accuracy: 0.4930\n",
+            "Epoch 65/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7029 - accuracy: 0.4710\n",
+            "Epoch 66/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6975 - accuracy: 0.4960\n",
+            "Epoch 67/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 0.6986 - accuracy: 0.4580\n",
+            "Epoch 68/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6962 - accuracy: 0.5010\n",
+            "Epoch 69/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6969 - accuracy: 0.5180\n",
+            "Epoch 70/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7001 - accuracy: 0.4790\n",
+            "Epoch 71/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6992 - accuracy: 0.4590\n",
+            "Epoch 72/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6976 - accuracy: 0.4950\n",
+            "Epoch 73/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6972 - accuracy: 0.4990\n",
+            "Epoch 74/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6966 - accuracy: 0.5290\n",
+            "Epoch 75/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6973 - accuracy: 0.5100\n",
+            "Epoch 76/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6980 - accuracy: 0.4900\n",
+            "Epoch 77/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6974 - accuracy: 0.4980\n",
+            "Epoch 78/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6977 - accuracy: 0.4760\n",
+            "Epoch 79/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 0.7018 - accuracy: 0.5090\n",
+            "Epoch 80/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6996 - accuracy: 0.5000\n",
+            "Epoch 81/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6993 - accuracy: 0.4880\n",
+            "Epoch 82/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6977 - accuracy: 0.5080\n",
+            "Epoch 83/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7005 - accuracy: 0.4590\n",
+            "Epoch 84/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6971 - accuracy: 0.5090\n",
+            "Epoch 85/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6969 - accuracy: 0.4750\n",
+            "Epoch 86/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7009 - accuracy: 0.4930\n",
+            "Epoch 87/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6984 - accuracy: 0.4670\n",
+            "Epoch 88/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6991 - accuracy: 0.4640\n",
+            "Epoch 89/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6979 - accuracy: 0.4870\n",
+            "Epoch 90/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6986 - accuracy: 0.4840\n",
+            "Epoch 91/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6997 - accuracy: 0.4930\n",
+            "Epoch 92/100\n",
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.7004 - accuracy: 0.4920\n",
+            "Epoch 93/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6981 - accuracy: 0.4790\n",
+            "Epoch 94/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7020 - accuracy: 0.4890\n",
+            "Epoch 95/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6979 - accuracy: 0.4590\n",
+            "Epoch 96/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6985 - accuracy: 0.4790\n",
+            "Epoch 97/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6977 - accuracy: 0.4470\n",
+            "Epoch 98/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6999 - accuracy: 0.4900\n",
+            "Epoch 99/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6980 - accuracy: 0.5120\n",
+            "Epoch 100/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6964 - accuracy: 0.4870\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7ab03e008880>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_3.evaluate(X,y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_HdcYa6pAiYX",
+        "outputId": "6ae5858f-025b-48f0-c6de-46815257fdea"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6990 - accuracy: 0.5100\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6990266442298889, 0.5099999904632568]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ffBMTp5Y-wcm"
+        "id": "u66zq8snAt6S"
       },
       "execution_count": null,
       "outputs": []
